...
                        padding: MaterialStateProperty.all<EdgeInsets>(
                            const EdgeInsets.symmetric(
                                horizontal: 10, vertical: 15)),
                        backgroundColor:
                            MaterialStateProperty.all<Color>(Colors.pink)),
                    child: const Text(
                      'Pay',
                      key: ValueKey('pay'),
                      style: TextStyle(fontSize: 20),
                    ),
                    onPressed: () {
                      // Navigator.push(
                      //   context,
...
